# memory-usage

./: .gitignore  .importlinter  README.md  class-diagram.txt  pyproject.toml
docs/: migration-guide.md  next-steps.md  repo-overview.md  session-summary.md
memory_usage/: __init__.py  cli.py  config.py  container.py  monitor_dashboard.py  monitoring.py
memory_usage/managers/: __init__.py  process_manager.py  state_manager.py  websocket_manager.py
memory_usage/models/: __init__.py  memory_models.py
memory_usage/services/: __init__.py  logging_service.py  monitoring_service.py  process_service.py
memory_usage/ui/: __init__.py  dashboard.py
memory_usage/ui/components/: __init__.py  catalogue_status_display.py  counts_display.py  jobs_display.py  log_viewer.py  memory_graph.py  status_bar.py
memory_usage/utils/: __init__.py  formatters.py  parsers.py
scripts/: stage.py
